ATLAS-5042: [React UI] Entity detail page - UI alignment, styling, and scroll issues (#359)

--- a/dashboard/src/styles/propertiesTab.scss
+++ b/dashboard/src/styles/propertiesTab.scss
@@ -57,4 +57,5 @@
 
 .attribute-value-text > a {
   width: 100% !important;
+  word-break: break-all;
 }
